# IoT-Swarm-Mesh

./: .gitignore  404.html  404.html.br  BlazorApp.staticwebassets.endpoints.json  BlazorApp.styles.css  BlazorApp.styles.css.br  CNAME  Engine.xml  README.md  WebApp  WebApp.Client.staticwebassets.endpoints.json  WebApp.deps.json  WebApp.staticwebassets.endpoints.json  WebApp.styles.css  WebApp.styles.css.br  app.css  app.css.br  index.html  index.html.br
Docs/: DevLog.md
Protocol/_theoreme_sim_py/: README.md  pyproject.toml  run_batch.py  search_robust_vector.py
Protocol/_theoreme_sim_py/src/: README.md  __init__.py
Protocol/_theoreme_sim_py/src/config/: README.md  __init__.py  config_normalizer.py  parameter_ranges.py
Protocol/_theoreme_sim_py/src/core/: README.md  __init__.py  constants.py  graph_utils.py  random.py  types.py
Protocol/_theoreme_sim_py/src/export/: README.md  __init__.py  snapshot_builder.py
Protocol/_theoreme_sim_py/src/generation/: README.md  __init__.py  charge_initializer.py  topology_generator.py
Protocol/_theoreme_sim_py/src/phases/: README.md  __init__.py  decay_phase.py  down_round_phase.py  up_round_phase.py
Protocol/_theoreme_sim_py/src/propagation/: README.md  __init__.py  charge_spread_round.py  decay_model.py  link_usage_tracker.py  neighbor_charge_propagation.py
Protocol/_theoreme_sim_py/src/research/: README.md  __init__.py  batch_research_runner.py  comprehensive_study.py  network_matrix_parser.py  parameter_search_space.py  report_data_builder.py  run_artifacts.py  stability_scorer.py  svg_charts.py
css/: app.css.br
(+1105 files in other folders)
