[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "theoreme-sim-py"
version = "0.1.0"
description = "Python batch simulation port of IoT Swarm Mesh theorem simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
include-package-data = true
